--- a/components.json
+++ b/components.json
@@ -12,11 +12,11 @@
   },
   "iconLibrary": "lucide",
   "aliases": {
-    "components": "@/src/components",
-    "utils": "@/src/lib/utils",
-    "ui": "@/src/components/ui",
-    "lib": "@/src/lib",
-    "hooks": "@/src/hooks"
+    "components": "src/components",
+    "utils": "/src/lib/utils",
+    "ui": "/src/components/ui",
+    "lib": "/src/lib",
+    "hooks": "/src/hooks"
   },
   "registries": {}
 }
