--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@react-email/components": "^1.0.1",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.83.0",
     "class-variance-authority": "^0.7.1",
@@ -31,6 +32,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
     "recharts": "^3.4.1",
+    "resend": "^6.5.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.12"
