--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@supabase/supabase-js": "^2.83.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
